# github-issue-lifecycle-analysis

./: .gitignore  README.md  config.yaml.example  pyproject.toml  visualizations
queries/: actor_involvement.sql  all_transitions.sql  assignee_history.sql  comment_history.sql  final_resolution_time.sql  label_analysis.sql  reopened_count.sql  state_duration.sql
sample_data/: README.md  events.csv  issues.csv  organizations.csv  repositories.csv
src/: database.py  export_sample_data.py  main.py  visualize_data.py
