[project]
name = "nagomi-assignment"
version = "0.1.0"
description = "Nagomi Assignment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.1",
    "polars>=1.31.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "numpy>=2.3.1",
]
